style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;800;900&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family:'Montserrat', sans-serif;
}

section{
    position: relative;
    width: 100%;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    background:url(musicmind-background.jpg)no-repeat;
    background-size: cover;
    background-position: center;
    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.7);
}

header{
    position: relative;
    top: 0;
    width: 100%;
    padding: 30px 100px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header h2 {
    display: flex;
    align-items: center;
}

header .logo{
    position: relative; 
    align-self: center;
    color: #0000FF;
    font-size: 30px;
    text-decoration: none;
    font-weight: 600;
    letter-spacing: 1px;
    margin: 5px;

}

header .navigation a{
    color: #FFFFFF;
    text-decoration: none;
    font-weight: 500;
    letter-spacing: 1px;
    padding: 2px 15px;
    border-radius: 10px;
    text-transform: uppercase;
    transition: 0.3s;
    transition-property: background;
}

header .navigation a:not(:last-child) {
    margin-right: 30px;
}

header .navigation a:hover{
    background: #f3a304;
}

.content{
    max-width: 100vw;
    max-height: 100vh;
    margin: 60px 100px;
    display: flex;
    flex-grow: 1;
    align-items: center;
    color: #FFFFFF;
    justify-content: center;
}

.content .info h2{
    color: #FFFFFF;
    font-size: 45px;
    letter-spacing: 1.5px;
    font-weight: 600;
    text-transform: uppercase;
    line-height: 50px;
    margin-bottom: 10px;

}


.content .info p{
    font-size: 16px;
    font-weight: 300;
    text-align: center;
    margin-bottom: 40px;
}

.media-icons {
    margin-bottom: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.media-icons a{
    position: relative;
    color: #FFFFFF;
    font-size: 50px;
}

.media-icons a:not(:last-child){
    margin-right: 60px;
}

.media-icons h4{
    position: relative;
    color: #FFFFFF;
    font-size: 20px;
    font-weight: 300;
    text-transform: uppercase;
}

/* 
about page */



.subpage-content {
    padding: 30px 100px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-grow: 1;
    align-items: flex-start;


  }

.subpage-content h2{
    color: #FFFFFF;
    font-size: 45px;
    letter-spacing: 1.5px;
    font-weight: 600;
    text-transform: uppercase;
    line-height: 50px;
    margin-bottom: 10px;
}

.subpage-content p{
    color: #FFFFFF;
    font-size: 16px;
    text-align: left;
    line-height: 25px;
    font-weight: 400;
    margin: 8px;


}

.link{
    color: #f3a304;
}

.link:visited{
    color: #FFFFFF;
}

#light-blue {
    color: #1fc2e1; 
}

